# mcp-gateway

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
mcp_gateway/: __init__.py  config.py  sanitizers.py  server.py
mcp_gateway/plugins/: README.md  base.py  manager.py
mcp_gateway/plugins/guardrails/: basic.py  lasso.py  presidio.py
mcp_gateway/plugins/tracing/: basic.py  xetrack.py
tests/: README.md  simple_pii_example.py  test_basic_guardrail.py  test_lasso_guardrail.py  test_lasso_guardrail_pii.py  xetrack_tracing_test.py
