[project]
name = "mcp-gateway"
version = "0.1.2"
description = "A gateway for MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
presidio = [
    "presidio-anonymizer>=2.2.0",
    "presidio-analyzer>=2.2.0",
]
xetrack = [
    "xetrack>=0.3.4",
]

[project.scripts]
mcp-gateway = "mcp_gateway.server:main"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_gateway*"]
exclude = ["data*", "front*", "tests*"]

[tool.setuptools.package-data]
"*" = ["docs/*.png"]
